--- a/league-frontend/package.json
+++ b/league-frontend/package.json
@@ -10,10 +10,15 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.6",
-    "preact": "^10.25.4",
     "@preact/preset-vite": "^2.10.1",
     "@types/node": "^22.13.4",
     "typescript": "~5.7.2",
     "vite": "^6.1.0"
+  },
+  "dependencies": {
+    "preact": "^10.25.4",
+    "preact-iso": "^2.9.0",
+    "preact-render-to-string": "^6.5.13",
+    "tailwindcss": "^4.0.6"
   }
 }
