--- a/league-backend/package.json
+++ b/league-backend/package.json
@@ -4,10 +4,14 @@
   "type": "module",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
-    "build": "bun build src/index.ts --compile --outfile=app"
+    "build": "bun build src/index.ts --compile --minify --sourcemap --bytecode --outfile=app"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.30.4"
+  },
+  "dependencies": {
+    "drizzle-orm": "^0.39.3"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
